add hypothesis testing

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -548,9 +548,15 @@
     "\n",
     "res.statistic, res.pvalue # statistic gives the actual value, pvalue gives the significance of the actual value\n",
     "\n",
-    "# reject the null hypothesis usually at alpha = 0.05 (5%)\n",
+    "if res.pvalue < 0.05:\n",
+    "    print(\"Bill_length_mm has a Normal distribution.\")\n",
+    "else:\n",
+    "    print(\"Bill_length_mm does not have a Normal distribution.\")\n",
+    "    \n",
+    "# reject the null hypothesis usually at alpha = 0.05 (5%) (if less, reject)\n",
+    "# for Kolmogorov-smirnov, null hypothesis is the set has a Normal distribution\n",
     "\n",
-    "# Output: bill_length_mm has a normal distribution\n"
+    "# Output: \n"
    ]
   },
   {
@@ -647,7 +653,7 @@
     "\n",
     "# reject the null hypothesis usually at alpha = 0.05 (5%)\n",
     "\n",
-    "# Output: bill_depth_mm has a normal distribution"
+    "# Output: "
    ]
   },
   {
@@ -775,7 +781,7 @@
     "\n",
     "# reject the null hypothesis usually at alpha = 0.05 (5%)\n",
     "\n",
-    "# Output: flipper_length_mm has a normal distribution"
+    "# Output: "
    ]
   },
   {
@@ -793,6 +799,8 @@
    ],
    "source": [
     "# Check for normality using Shapiro-Wilk test\n",
+    "# For Shapiro–Wilk test, the null hypothesis is that the sample comes from a normal distribution\n",
+    "\n",
     "flipper_length_normal = shapiro(df[\"flipper_length_mm\"])\n",
     "\n",
     "if flipper_length_normal.pvalue > 0.05:\n",
@@ -858,7 +866,7 @@
     "# Check for normality using Shapiro-Wilk test\n",
     "body_mass_normal = shapiro(df[\"body_mass_g\"])\n",
     "\n",
-    "if body_mass_normal.pvalue > 0.05:\n",
+    "if body_mass_normal.pvalue > 0.05: # DOUBLE CHECK\n",
     "    print(\"Body Mass (g) may follow a Normal distribution.\")\n",
     "else:\n",
     "    print(\"Body Mass (g) does not follow a Normal distribution.\")"
@@ -866,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +891,7 @@
        "Name: body_mass_g, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +913,7 @@
        "(nan, 0.0001)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +931,7 @@
     "\n",
     "# reject the null hypothesis usually at alpha = 0.05 (5%)\n",
     "\n",
-    "# Output: body_mass_g has a normal distribution"
+    "# Output: "
    ]
   },
   {
