distfit and README.md

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -407,7 +407,7 @@
     "import pandas as pd # for data loading from other sources and processing\n",
     "import matplotlib.pyplot as plt # for data plotting and distribution fitting\n",
     "import seaborn as sns # for data plotting and distribution fitting\n",
-    "from distfit import distfit # for probability distribution"
+    "from distfit import distfit # for probability density fitting and hypothesis testing"
    ]
   },
   {
@@ -546,10 +546,10 @@
     }
    ],
    "source": [
-    "dist = distfit()\n",
+    "dist = distfit() # Initialize distfit\n",
     "\n",
-    "dist.fit_transform(df['bill_length_mm'].dropna().values)   # Fit distributions on empirical data X\n",
-    "dist.predict(df['bill_length_mm'].dropna().values)         # Predict the probability of the resonse variables\n",
+    "dist.fit_transform(df['bill_length_mm'].dropna().values) # Fit distributions on empirical data bill_length_mm, after dropping missing values\n",
+    "dist.predict(df['bill_length_mm'].dropna().values) # Predict the probability of the response variables\n",
     "dist.plot() # Plot the best fitted distribution (y is included if prediction is made)"
    ]
   },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
       "[distfit] >INFO> [expon     ] [0.00 sec] [RSS: 0.0671717] [loc=13.100 scale=4.051]\n",
       "[distfit] >INFO> [pareto    ] [0.00 sec] [RSS: 0.0671717] [loc=-268435442.900 scale=268435456.000]\n",
       "[distfit] >INFO> [dweibull  ] [0.02 sec] [RSS: 0.0118817] [loc=17.378 scale=1.821]\n",
-      "[distfit] >INFO> [t         ] [0.21 sec] [RSS: 0.0113282] [loc=17.151 scale=1.972]\n",
+      "[distfit] >INFO> [t         ] [0.23 sec] [RSS: 0.0113282] [loc=17.151 scale=1.972]\n",
       "[distfit] >INFO> [genextreme] [0.04 sec] [RSS: 0.00785858] [loc=16.534 scale=2.033]\n",
       "[distfit] >INFO> [gamma     ] [0.04 sec] [RSS: 0.0122692] [loc=-25.596 scale=0.092]\n",
       "[distfit] >INFO> [lognorm   ] [0.00 sec] [RSS: 0.0113277] [loc=-262130.900 scale=262148.051]\n",
@@ -627,7 +627,7 @@
        " <Axes: title={'center': '\\nbeta(a=1.78879, b=1.94301, loc=12.9906, scale=8.60919)'}, xlabel='Values', ylabel='Frequency'>)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -643,11 +643,10 @@
     }
    ],
    "source": [
-    "# Initialize distfit\n",
-    "dist = distfit()\n",
+    "dist = distfit() # Initialize distfit\n",
     "\n",
-    "dist.fit_transform(df['bill_depth_mm'].dropna().values)   # Fit distributions on empirical data X\n",
-    "dist.predict(df['bill_depth_mm'].dropna().values)         # Predict the probability of the resonse variables\n",
+    "dist.fit_transform(df['bill_depth_mm'].dropna().values)   # Fit distributions on empirical data bill_depth_mm\n",
+    "dist.predict(df['bill_depth_mm'].dropna().values)         # Predict the probability of the response variables\n",
     "dist.plot() # Plot the best fitted distribution (y is included if prediction is made)"
    ]
   },
@@ -655,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The distribution with the lowest RSS is selected (the beta distribution) for bill_length_mm variable."
+    "The distribution with the lowest RSS is selected (the Beta distribution) for bill_depth_mm variable."
    ]
   },
   {
@@ -745,8 +744,8 @@
    "source": [
     "dist = distfit()\n",
     "\n",
-    "dist.fit_transform(df['flipper_length_mm'].dropna().values)   # Fit distributions on empirical data X\n",
-    "dist.predict(df['flipper_length_mm'].dropna().values)         # Predict the probability of the resonse variables\n",
+    "dist.fit_transform(df['flipper_length_mm'].dropna().values)   # Fit distributions on empirical data flipper_length_mm after dropping missing values\n",
+    "dist.predict(df['flipper_length_mm'].dropna().values)         # Predict the probability of the response variables\n",
     "dist.plot() # Plot the best fitted distribution (y is included if prediction is made)"
    ]
   },
@@ -847,8 +846,8 @@
    "source": [
     "dist = distfit()\n",
     "\n",
-    "dist.fit_transform(df['body_mass_g'].dropna().values)   # Fit distributions on empirical data X\n",
-    "dist.predict(df['body_mass_g'].dropna().values)         # Predict the probability of the resonse variables\n",
+    "dist.fit_transform(df['body_mass_g'].dropna().values)   # Fit distributions on empirical data body_mass_g\n",
+    "dist.predict(df['body_mass_g'].dropna().values)         # Predict the probability of the response variables\n",
     "dist.plot() # Plot the best fitted distribution (y is included if prediction is made)"
    ]
   },
