--- a/project.ipynb
+++ b/project.ipynb
@@ -36,7 +36,11 @@
    "source": [
     "import numpy as np # for computational operations\n",
     "import pandas as pd # for data loading from other sources and processing\n",
-    "import matplotlib.pyplot as plt # for data visualization"
+    "import matplotlib.pyplot as plt # for data visualization\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from distfit import distfit"
    ]
   },
   {
