table for Task 2

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
     "\n",
     "# OR\n",
     "\n",
-    "temp_array = df['temp'].values\n",
+    "bill_length_mm_array = df['bill_length_mm'].values\n",
     "# print(bill_length_mm_array)\n",
     "\n",
     "# Create a histogram and plot the fitted normal distribution\n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
       "[distfit] >INFO> [norm      ] [0.00 sec] [RSS: 0.00220202] [loc=43.922 scale=5.452]\n",
       "[distfit] >INFO> [expon     ] [0.00 sec] [RSS: 0.0100282] [loc=32.100 scale=11.822]\n",
       "[distfit] >INFO> [pareto    ] [0.00 sec] [RSS: 0.0100282] [loc=-8589934559.900 scale=8589934592.000]\n",
-      "[distfit] >INFO> [dweibull  ] [0.04 sec] [RSS: 0.00132702] [loc=43.893 scale=5.259]\n",
+      "[distfit] >INFO> [dweibull  ] [0.03 sec] [RSS: 0.00132702] [loc=43.893 scale=5.259]\n",
       "[distfit] >INFO> [t         ] [0.21 sec] [RSS: 0.00220229] [loc=43.921 scale=5.451]\n",
       "[distfit] >INFO> [genextreme] [0.05 sec] [RSS: 0.00205494] [loc=41.920 scale=5.322]\n",
       "[distfit] >INFO> [gamma     ] [0.04 sec] [RSS: 0.00222517] [loc=-134.165 scale=0.167]\n",
@@ -530,7 +530,7 @@
        " <Axes: title={'center': '\\ndweibull(c=1.71516, loc=43.8925, scale=5.25861)'}, xlabel='Values', ylabel='Frequency'>)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The distribution with the lowest RSS is selected (the Weibull distribution) for bill_length_mm variable."
+    "The distribution with the lowest RSS is selected (the Double Weibull distribution) for bill_length_mm variable."
    ]
   },
   {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -610,8 +610,8 @@
       "[distfit] >INFO> [norm      ] [0.00 sec] [RSS: 0.0113275] [loc=17.151 scale=1.972]\n",
       "[distfit] >INFO> [expon     ] [0.00 sec] [RSS: 0.0671717] [loc=13.100 scale=4.051]\n",
       "[distfit] >INFO> [pareto    ] [0.00 sec] [RSS: 0.0671717] [loc=-268435442.900 scale=268435456.000]\n",
-      "[distfit] >INFO> [dweibull  ] [0.02 sec] [RSS: 0.0118817] [loc=17.378 scale=1.821]\n",
-      "[distfit] >INFO> [t         ] [0.23 sec] [RSS: 0.0113282] [loc=17.151 scale=1.972]\n",
+      "[distfit] >INFO> [dweibull  ] [0.01 sec] [RSS: 0.0118817] [loc=17.378 scale=1.821]\n",
+      "[distfit] >INFO> [t         ] [0.20 sec] [RSS: 0.0113282] [loc=17.151 scale=1.972]\n",
       "[distfit] >INFO> [genextreme] [0.04 sec] [RSS: 0.00785858] [loc=16.534 scale=2.033]\n",
       "[distfit] >INFO> [gamma     ] [0.04 sec] [RSS: 0.0122692] [loc=-25.596 scale=0.092]\n",
       "[distfit] >INFO> [lognorm   ] [0.00 sec] [RSS: 0.0113277] [loc=-262130.900 scale=262148.051]\n",
@@ -627,7 +627,7 @@
        " <Axes: title={'center': '\\nbeta(a=1.78879, b=1.94301, loc=12.9906, scale=8.60919)'}, xlabel='Values', ylabel='Frequency'>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -709,8 +709,8 @@
       "[distfit] >INFO> [norm      ] [0.00 sec] [RSS: 0.000826991] [loc=200.915 scale=14.041]\n",
       "[distfit] >INFO> [expon     ] [0.00 sec] [RSS: 0.0020735] [loc=172.000 scale=28.915]\n",
       "[distfit] >INFO> [pareto    ] [0.00 sec] [RSS: 0.0020735] [loc=-4294967124.000 scale=4294967296.000]\n",
-      "[distfit] >INFO> [dweibull  ] [0.04 sec] [RSS: 0.000255796] [loc=203.957 scale=14.441]\n",
-      "[distfit] >INFO> [t         ] [0.21 sec] [RSS: 0.000826915] [loc=200.915 scale=14.042]\n",
+      "[distfit] >INFO> [dweibull  ] [0.01 sec] [RSS: 0.000255796] [loc=203.957 scale=14.441]\n",
+      "[distfit] >INFO> [t         ] [0.20 sec] [RSS: 0.000826915] [loc=200.915 scale=14.042]\n",
       "[distfit] >INFO> [genextreme] [0.09 sec] [RSS: 0.000642431] [loc=195.001 scale=12.382]\n",
       "[distfit] >INFO> [gamma     ] [0.02 sec] [RSS: 0.000558344] [loc=166.110 scale=5.980]\n",
       "[distfit] >INFO> [lognorm   ] [0.00 sec] [RSS: 0.000580602] [loc=150.667 scale=48.301]\n",
@@ -726,7 +726,7 @@
        " <Axes: title={'center': '\\ndweibull(c=2.05434, loc=203.957, scale=14.4412)'}, xlabel='Values', ylabel='Frequency'>)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -753,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The distribution with the lowest RSS is selected (the Weibull distribution) for flipper_length_mm variable."
+    "The distribution with the lowest RSS is selected (the Double Weibull distribution) for flipper_length_mm variable."
    ]
   },
   {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
       "[distfit] >INFO> [norm      ] [0.00 sec] [RSS: 1.20405e-07] [loc=4201.754 scale=800.781]\n",
       "[distfit] >INFO> [expon     ] [0.00 sec] [RSS: 4.06033e-07] [loc=2700.000 scale=1501.754]\n",
       "[distfit] >INFO> [pareto    ] [0.00 sec] [RSS: 4.06033e-07] [loc=-274877904244.000 scale=274877906944.000]\n",
-      "[distfit] >INFO> [dweibull  ] [0.06 sec] [RSS: 1.02503e-07] [loc=4224.060 scale=751.625]\n",
+      "[distfit] >INFO> [dweibull  ] [0.05 sec] [RSS: 1.02503e-07] [loc=4224.060 scale=751.625]\n",
       "[distfit] >INFO> [t         ] [0.21 sec] [RSS: 1.20401e-07] [loc=4201.832 scale=800.865]\n",
       "[distfit] >INFO> [genextreme] [0.09 sec] [RSS: 9.60938e-07] [loc=2700.418 scale=2.428]\n",
       "[distfit] >INFO> [gamma     ] [0.02 sec] [RSS: 4.17172e-08] [loc=2487.054 scale=399.816]\n",
@@ -828,7 +828,7 @@
        " <Axes: title={'center': '\\ngamma(a=4.28872, loc=2487.05, scale=399.816)'}, xlabel='Values', ylabel='Frequency'>)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -862,6 +862,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The probability distribution for all five columns are summarized in Table 1.\n",
+    "\n",
+    "#### Table 1: Probability Distribution for Four Numerical Variables \n",
+    "\n",
+    "| **Column**| **Probability Distribution** | \n",
+    "| :-------: | :------: |\n",
+    "| bill_length_mm  |  Double Weibull   |\n",
+    "| bill_depth_mm    |  Beta |\n",
+    "| flipper_length_mm   |   Double Weibull  |\n",
+    "| body_mass_g    |  Gamma |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Task 4 : Head Probability** \n",
     "> Suppose you are flipping two coins, each with a probability p of giving heads.\n",
     "\n",
@@ -871,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
