--- a/project.ipynb
+++ b/project.ipynb
@@ -17,6 +17,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Project Instruction:\n",
+    "\n",
     "> The project is to create a notebook investigating the variables and data points within the well-known iris flower data set associated with Ronald A Fisher.(1)\n",
     "\n",
     "> In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
@@ -25,7 +27,44 @@
     "\n",
     "> Select, demonstrate, and explain the most appropriate plot(s) for each variable.\n",
     "\n",
-    "> The notebook should follow a cohesive narrative about the data set."
+    "> The notebook should follow a cohesive narrative about the data set.\n",
+    "\n",
+    "Deadline is Friday 22 December 2023."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project Title: Analysis Of The Iris Flower Dataset\n",
+    "\n",
+    "## Abstract\n",
+    "\n",
+    "The goal of this project is to investigate the variables and data points within the Iris flower dataset. The Iris dataset contains 5 columns and 150 rows, consisting of 3 classes species with 50 lines each, with no missing values. \n",
+    "\n",
+    "\n",
+    "The analysis done are\n",
+    "\n",
+    "Results show that \n",
+    "\n",
+    "This data can be used to develop Interactive Identification Keys for future taxonomists and researchers, as well as species determination using pattern recognition in Machine Learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background\n",
+    "\n",
+    "The genus Iris \n",
+    "The length and width of petal of sepal were used to  morphologically determine whether an Iris is one of three species: *setosa*, *versicolor* or *virginica*. In this genus, the color attribute is probably unreliable because of color polymorphism within the species or population."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Methods and Implementatiion"
    ]
   },
   {
@@ -34,13 +73,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np # for computational operations\n",
-    "import pandas as pd # for data loading from other sources and processing\n",
-    "import matplotlib.pyplot as plt # for data visualization\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt \n",
     "\n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt \n",
     "\n",
-    "from distfit import distfit"
+    "from distfit import distfit\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier \n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, classification_report, f1_score, accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB"
    ]
   },
   {
@@ -224,6 +272,7 @@
    "metadata": {},
    "source": [
     "# References\n",
+    "\n",
     "\n"
    ]
   },
