--- a/project.ipynb
+++ b/project.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "## Abstract\n",
     "\n",
-    "The goal of this project is to investigate the variables and data points within the Iris flower dataset. The Iris dataset contains 5 columns and 150 rows, consisting of 3 classes species with 50 lines each, with no missing values. \n",
+    "The goal of this project is to investigate the variables and data points within the Iris flower dataset. The Iris dataset contains 5 columns and 150 rows, consisting of 3 classes species with 50 lines each, with no missing values. Four attributes ( length and width of petal of sepal) were used to morphologically determine whether an Iris is one of three species: *setosa*, *versicolor* or *virginica*. \n",
     "\n",
     "\n",
     "The analysis done are\n",
@@ -54,17 +54,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Background\n",
+    "## 1.0 Background\n",
     "\n",
     "The genus Iris \n",
-    "The length and width of petal of sepal were used to  morphologically determine whether an Iris is one of three species: *setosa*, *versicolor* or *virginica*. In this genus, the color attribute is probably unreliable because of color polymorphism within the species or population."
+    "\n",
+    "\n",
+    "It was introduced by the British biologist and statistician Ronald A. Fisher in his paper to describe linear discriminant analysis published in 1936 (Wikipedia Contributors, 2019). The flowers were collected from  Gaspé Peninsula in Canada (Anderson, 1928, 1935, 1936), (Randolph, 1934)\n",
+    "\n",
+    "In this genus, the color attribute is probably unreliable because of color polymorphism within the species or population."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Methods and Implementatiion"
+    "## 2.0 Methods and Implementatiion"
    ]
   },
   {
@@ -247,6 +251,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.0 Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -271,7 +303,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## 4.0 Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
     "\n",
     "\n"
    ]
