--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -331,9 +331,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the output, the first (species), second (island) and seventh (sex) columns are objects. These objects are strings. String is a more specialized text data type compared to the generic object data type. Strings are not categorical data type but they can be made into categories. In this instance, it is a categorical data type, which is a type of qualitative data, meaning it can only fall into a select group. The three species are Adelie, Chinstrap, and Gentoo. The three islands are Torgersen, Dream, and Biscoe. The sex are either \"Male\" or \"Female\". Hence, the species, island and sex are nominal types of categorical data which has no order or ranking. \n",
+    "From the output, the first (species), second (island) and seventh (sex) columns are objects. These objects are strings. String is a more specialized text data type compared to the generic object data type. Strings are not categorical data type but they can be made into categories (Konkiewicz, 2020). In this instance, it is a categorical data type, which is a type of qualitative data, meaning it can only fall into a select group (Dettori and Norvell, 2018). The three species are Adelie, Chinstrap, and Gentoo. The three islands are Torgersen, Dream, and Biscoe. The sex are either \"Male\" or \"Female\". Hence, the species, island and sex are nominal types of categorical data which has no order or ranking. \n",
     "\n",
-    "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type, which is a type of quantitative data. These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point.\n",
+    "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type, which is a type of quantitative data (Pramoditha, 2020). These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.).\n",
     "\n",
     "While the output showed that the data frame consists of columns containing objects and floats, a quick lookover of the data file shows that the flipper length and body mass are int values. My question was, why did these columns output as floats? \n",
     "\n",
@@ -469,6 +469,10 @@
     "\n",
     "datatofish.com. (2023). How to Import a CSV File into Python using Pandas - Data to Fish. [online] Available at: https://datatofish.com/import-csv-file-python-using-pandas/ [Accessed 20 Oct. 2023].\n",
     "\n",
+    "Dettori, J.R. and Norvell, D.C. (2018). The Anatomy of Data. Global Spine Journal , [online] 8(3), pp.311–313. doi:https://doi.org/10.1177/2192568217746998.\n",
+    "\n",
+    "Konkiewicz, M. (2020). What are categorical variables and how to encode them? [online] Google.com. Available at: https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjk79C4k_OCAxWVUUEAHXarB-UQFnoECDMQAQ&url=https%3A%2F%2Fwww.aboutdatablog.com%2Fpost%2Fwhat-are-categorical-variables-and-how-to-encode-them&usg=AOvVaw1BoVgNG2an8NjNRf4PMG3x&opi=89978449 [Accessed 3 Dec. 2023].\n",
+    "\n",
     "note.nkmk.me. (2023). pandas: How to use astype() to cast dtype of DataFrame | note.nkmk.me. [online] Available at: https://note.nkmk.me/en/python-pandas-dtype-astype/ [Accessed 20 Oct. 2023].\n",
     "\n",
     "pandas.pydata.org Categorical. (n.d.). Categorical data — pandas 1.5.0 documentation. [online] Available at: https://pandas.pydata.org/docs/user_guide/categorical.html [Accessed 21 Oct. 2023].\n",
@@ -485,6 +489,8 @@
     "\n",
     "Polamuri, S. (2023). Mastering Data Analysis: A Comprehensive Look at Continuous and Categorical Data Types - Dataaspirant. [online] https://dataaspirant.com/. Available at: https://dataaspirant.com/continuous-and-categorical-data-types/ [Accessed 20 Oct. 2023].\n",
     "\n",
+    "Pramoditha, R. (2020). pandas for Data Science: Part 2. [online] Data Science 365. Available at: https://medium.com/data-science-365/pandas-for-data-science-part-2-c12c3ee876c2 [Accessed 3 Nov. 2023].\n",
+    "\n",
     "Python Tutorial - Master. (n.d.). Understanding the Python try...except...finally Statement. [online] Available at: https://www.pythontutorial.net/python-basics/python-try-except-finally/ [Accessed 21 Oct. 2023].\n",
     "\n",
     "Satyam, K. (2020). Try, Except, else and Finally in Python. [online] GeeksforGeeks. Available at: https://www.geeksforgeeks.org/try-except-else-and-finally-in-python/ [Accessed 21 Oct. 2023].\n",
@@ -498,6 +504,8 @@
     "W3Schools (2019). Python For Loops. [online] W3schools.com. Available at: https://www.w3schools.com/python/python_for_loops.asp [Accessed 22 Oct. 2023].\n",
     "\n",
     "Waskom, M. (2022). seaborn-data. [online] GitHub. Available at: https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv [Accessed 13 Oct. 2023].\n",
+    "\n",
+    "web.pdx.edu. (n.d.). lecture1 Types of scales & levels of measurement. [online] Available at: https://web.pdx.edu/~newsomj/pa551/lecture1.htm [Accessed 3 Nov. 2023].\n",
     "\n",
     "www.w3schools.com. (n.d.). Python isinstance() Function. [online] Available at: https://www.w3schools.com/python/ref_func_isinstance.asp [Accessed 22 Oct. 2023]."
    ]
